# spek-core

./: Cargo.toml  README.md
docs/: 01_core_vision.md  02_core_architecture.md  03_signal_pipeline.md  04_rendering_model.md  05_legend_system.md  06_platform_strategy_and_roadmap.md
src/: lib.rs
src/analysis/: basic.rs  fft.rs  mod.rs
src/api/: generate.rs  image.rs  mod.rs  result.rs  settings.rs
src/audio/: ffmpeg.rs  mod.rs
src/cli/: main.rs
src/color/: cpu.rs  mod.rs  spek.rs
src/legend/: compositor.rs  mod.rs  overlay.rs  simple.rs
src/render/: basic.rs  cpu.rs  mod.rs
