[package]
name = "spek-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Headless, deterministic spectrogram core with mandatory legend rendering"
repository = "https://github.com/d4NY0H/spek-core"

[lib]
name = "spek_core"
path = "src/lib.rs"

[dependencies]
# Error handling
thiserror = "1.0"

# Image output (CLI only)
image = { version = "0.24", optional = true }

[features]
default = []
cli = ["image"]
